dataset1235/2025-2/2868285114/users/2008605748/executions/3792430146_359761547.log
== RUN (2025-09-02 23:19:28)
-- CODE: 
idade = int
print (idade)
if:
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:19:12)
-- CODE: 
idade = int
print (idade)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
<class 'int'>
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
<class 'int'>
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:08:24)
-- CODE: 
idade
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:44)
-- CODE: 
idade = int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:21:51)
-- CODE: 
idade = int(input())
if 
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:19:06)
-- CODE: 
idade = int(idade)
print (idade)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:22:44)
-- CODE: 
idade = int(input())
if (idade >= 2):
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:09:39)
-- CODE: 
int()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:43)
-- CODE: 
idade = int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:21:49)
-- CODE: 
idade = int(input())
if 
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:08:31)
-- CODE: 
int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:14:45)
-- CODE: 
idade = int("idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:19:16)
-- CODE: 
idade = int
print (idade)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
<class 'int'>
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
<class 'int'>
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
<class 'int'>
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:21:49)
-- CODE: 
idade = int(input())
if 
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:08:32)
-- CODE: 
int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:14:45)
-- CODE: 
idade = int("idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int("idade")
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'idade'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:08:25)
-- CODE: 
idade
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:52)
-- CODE: 
idade = int(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:12:13)
-- CODE: 
int(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input)
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:58)
-- CODE: 
idade = int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:19:07)
-- CODE: 
idade = int(idade)
print (idade)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(idade)
                ^^^^^
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:18:43)
-- CODE: 
idade = int
print (paga)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:12:00)
-- CODE: 
int(input
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    int(input
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:16:35)
-- CODE: 
idade = int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:18:19)
-- CODE: 
idade = int
print

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:13:44)
-- CODE: 
idade = int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:14:15)
-- CODE: 
idade = int(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    idade = int(input)
            ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:16:31)
-- CODE: 
idade = int(
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 1
    idade = int(
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:22:44)
-- CODE: 
idade = int(input())
if (idade >= 2):
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:12:04)
-- CODE: 
i
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined. Did you mean: 'id'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:12:07)
-- CODE: 
int
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:18:42)
-- CODE: 
idade = int
print (paga)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (paga)
           ^^^^
NameError: name 'paga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:22:45)
-- CODE: 
idade = int(input())
if (idade >= 2):
  


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 4
    
IndentationError: expected an indented block after 'if' statement on line 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 23:18:19)
-- CODE: 
idade = int
print

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
